--- a/ipld/amt/Cargo.toml
+++ b/ipld/amt/Cargo.toml
@@ -14,7 +14,7 @@ thiserror = "1.0"
 once_cell = "1.5"
 itertools = "0.10"
 anyhow = "1.0.51"
-fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }
+fvm_ipld_blockstore = { version = "0.1", path = "../../../ref-fvm2/ipld/blockstore" }
 fvm_ipld_encoding = { version = "0.3", path = "../encoding" }
 
 [features]
