--- a/ipld/car/Cargo.toml
+++ b/ipld/car/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 futures = "0.3.5"
 integer-encoding = { version = "3.0", features = ["futures_async"] }
-fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }
+fvm_ipld_blockstore = { version = "0.1", path = "../../../ref-fvm2/ipld/blockstore" }
 fvm_ipld_encoding = { version = "0.3", path = "../encoding" }
 
 [dev-dependencies]
