--- a/ipld/hamt/Cargo.toml
+++ b/ipld/hamt/Cargo.toml
@@ -19,7 +19,7 @@ forest_hash_utils = "0.1"
 anyhow = "1.0.51"
 libipld-core = { version = "0.14.0", features = ["serde-codec"] }
 fvm_ipld_encoding = { version = "0.3", path = "../encoding" }
-fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }
+fvm_ipld_blockstore = { version = "0.1", path = "../../../ref-fvm2/ipld/blockstore" }
 
 [features]
 identity = []
