--- a/ipld/kamt/Cargo.toml
+++ b/ipld/kamt/Cargo.toml
@@ -18,7 +18,7 @@ once_cell = "1.5"
 forest_hash_utils = "0.1"
 anyhow = "1.0.51"
 fvm_ipld_encoding = { version = "0.3", path = "../encoding" }
-fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }
+fvm_ipld_blockstore = { version = "0.1", path = "../../../ref-fvm2/ipld/blockstore" }
 
 [features]
 # This feature should just be used for testing (ignoring links that don't exist in store)
