--- a/testing/calibration/Cargo.toml
+++ b/testing/calibration/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/filecoin-project/ref-fvm"
 fvm = { version = "3.0.0", path = "../../fvm", default-features = false, features = ["testing", "gas_calibration"] }
 fvm_shared = { version = "3.0.0", path = "../../shared", features = ["testing"] }
 fvm_ipld_car = { version = "0.6.0", path = "../../ipld/car" }
-fvm_ipld_blockstore = { version = "0.1.1", path = "../../ipld/blockstore" }
+fvm_ipld_blockstore = { version = "0.1.1", path = "../../../../ref-fvm2/ipld/ipld/blockstore" }
 fvm_ipld_encoding = { version = "0.3.3", path = "../../ipld/encoding" }
 fvm_integration_tests = { path = "../integration" }
 
