--- a/ipld/encoding/Cargo.toml
+++ b/ipld/encoding/Cargo.toml
@@ -15,7 +15,9 @@ serde_repr = "0.1"
 cid = { version = "0.8.5", default-features = false, features = ["serde-codec", "std"] }
 thiserror = "1.0"
 anyhow = "1.0.56"
+# fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }
 fvm_ipld_blockstore = { version = "0.1", path = "../../../ref-fvm2/ipld/blockstore" }
+
 # multihash is also re-exported by `cid`. Having `multihash` here as a
 # depdendency is needed to enable the features of the re-export.
 multihash = { version = "0.16.1", default-features = false, features = ["blake2b", "multihash-impl"] }
