--- a/ipld/kamt/fuzz/Cargo.toml
+++ b/ipld/kamt/fuzz/Cargo.toml
@@ -14,6 +14,7 @@ arbitrary = { version = "1.1", features = ["derive"] }
 ahash = "0.7.6"
 
 fvm_ipld_kamt = { path = ".." }
+# fvm_ipld_blockstore = { path = "../../blockstore" }
 fvm_ipld_blockstore = { path = "../../../../ref-fvm2/ipld/blockstore" }
 
 
