--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -22,7 +22,9 @@ cid = { version = "0.8.5", default-features = false, features = ["serde-codec", 
 multihash = { version = "0.16.3", default-features = false, features = ["multihash-impl", "sha2", "sha3", "ripemd"] }
 unsigned-varint = "0.7.1"
 anyhow = "1.0.51"
+# fvm_ipld_blockstore = { version = "0.1", path = "../ipld/blockstore" }
 fvm_ipld_blockstore = { version = "0.1", path = "../../ref-fvm2/ipld/blockstore" }
+
 fvm_ipld_encoding = { version = "0.3", path = "../ipld/encoding" }
 serde = { version = "1", default-features = false }
 serde_tuple = "0.5"
