--- a/testing/conformance/Cargo.toml
+++ b/testing/conformance/Cargo.toml
@@ -13,7 +13,9 @@ fvm_shared = { version = "3.1.0", path = "../../shared" }
 fvm_ipld_hamt = { version = "0.6.1", path = "../../ipld/hamt" }
 fvm_ipld_amt = { version = "0.5.1", path = "../../ipld/amt" }
 fvm_ipld_car = { version = "0.6.0", path = "../../ipld/car" }
-fvm_ipld_blockstore = { version = "0.1.1", path = "../../../../ref-fvm2/ipld/ipld/blockstore" }
+# fvm_ipld_blockstore = { version = "0.1.1", path = "../../ipld/blockstore" }
+fvm_ipld_blockstore = { version = "0.1.1", path = "../../../ref-fvm2/ipld/blockstore" }
+
 fvm_ipld_encoding = { version = "0.3.3", path = "../../ipld/encoding" }
 
 anyhow = "1.0.47"
